xml/src1/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Mailing_Reports__c</fullName>
        <description>The associated mailing reports that generate the subscribers for this subscription.</description>
        <inlineHelpText>The associated mailing reports that generate the subscribers for this subscription.</inlineHelpText>
        <label>Mailing Reports</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Opt_Out__c</fullName>
        <description>The total number of subscribers that opt out.</description>
        <inlineHelpText>The total number of subscribers that opt out.</inlineHelpText>
        <label>Total Opt Out</label>
        <summaryFilterItems>
            <field>Subscriber__c.Status__c</field>
            <operation>equals</operation>
            <value>Opt Out</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscriber__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sticky__c</fullName>
        <description>Total number of subscribers marked as sticky.</description>
        <inlineHelpText>Total number of subscribers marked as sticky.</inlineHelpText>
        <label>Total Sticky</label>
        <summaryFilterItems>
            <field>Subscriber__c.Sticky__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscriber__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subscribers__c</fullName>
        <description>The total number of subscribers to receive this subscription.</description>
        <inlineHelpText>The total number of subscribers to receive this subscription.</inlineHelpText>
        <label>Total Subscribers</label>
        <summaryFilterItems>
            <field>Subscriber__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Opt Out</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscriber__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>